2015-06-24  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	* configure.ac: Post-release version suffix added.

2015-05-03  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	* NEWS, configure.ac:
	=== Version 0.2.9 ===

2015-05-03  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Use relative paths for symlinks.

	* tools/Makefile.am, man/Makefile.am:
	  - Use relative paths for symlinks to avoid confusion in
	    installation with DESTDIR.

2015-05-03  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Also install symlink for old trietool.

	* man/Makefile.am:
	  - Add hooks to install/uninstall symlink for old man page.

2015-05-02  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	* configure.ac:
	  - Bump library revision to reflect code changes.

2015-04-29  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Bump doxygen required version.

	* configure.ac:
	  - Bump doxygen required version to 1.8.8, according to recent
	    Doxyfile update.

2015-04-21  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix infinite loop on empty trie iteration.

	* tests/Makefile.am, +tests/test_null_trie.c:
	  - Add test case for empty trie iteration.

	* datrie/darray.c (da_first_separate):
	  - Fix error condition after loop ending.

	Thanks Sergei Lebedev <sergei.a.lebedev@gmail.com> for the report
	via personal mail.

	Original report: https://github.com/kmike/datrie/issues/17

2015-04-12  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Document about alphabet size.

	* datrie/trie.h:
	  - Add to doc comment a description on the alphabet size limit
	    and the mapped raw codes.

	Thanks edgehogapp for the suggestion.
	https://groups.google.com/forum/#!topic/thai-linux-foss-devel/U-O__IfviQ0

2015-04-11  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Clarify Symbols' struct & methods.

	* datrie/darray.c (struct _Symbols):
	  - Use TRIE_CHAR_MAX + 1 instead of hard-coded value for symbols[]
	    array size.

	Thanks edgehogapp for the suggestion.